# dell-unity-mcp-server

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  convert_swagger_to_openapi.py  docker-compose.yml  overview.json  pyproject.toml  requirements.txt  spec.yml  start-http.sh
.github/workflows/: ci.yml  publish.yml
dev/: README.md
tests/: __init__.py  conftest.py  test_api_client.py  test_config.py  test_http_server.py  test_server.py  test_tool_generator.py
unity_mcp/: README.md  __init__.py  api_client.py  config.py  exceptions.py  http_server.py  logging_config.py  main.py  server.py  tool_generator.py
