[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dell-unity-mcp-server"
version = "1.0.2"
description = "Model Context Protocol (MCP) server for Dell Unity Storage Systems"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Dell Technologies", email = "support@dell.com"}
]
maintainers = [
    {name = "Dell Technologies", email = "support@dell.com"}
]
keywords = [
    "dell",
    "unity",
    "storage",
    "mcp",
    "model-context-protocol",
    "ai",
    "llm",
    "claude",
    "automation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
unity-mcp = "unity_mcp.main:run"

[project.urls]
Homepage = "https://github.com/sachdev27/dell-unity-mcp-server"
Documentation = "https://github.com/sachdev27/dell-unity-mcp-server#readme"
Repository = "https://github.com/sachdev27/dell-unity-mcp-server.git"
Issues = "https://github.com/sachdev27/dell-unity-mcp-server/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["unity_mcp*"]

[tool.setuptools.package-data]
unity_mcp = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["mcp.*", "httpx.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["unity_mcp"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
